[gd_scene load_steps=33 format=3 uid="uid://devyfl4lqc1f3"]

[ext_resource type="Script" path="res://Enemy/_tempSpider/spider.gd" id="1_dw5bl"]
[ext_resource type="Texture2D" uid="uid://dkg8hbdt7db4y" path="res://Enemy/_tempShadow.png" id="1_ff7es"]
[ext_resource type="Texture2D" uid="uid://bkmmm3qn880w2" path="res://Enemy/_tempSpider/_tempSpiderSpritesheet.png" id="1_muhrx"]
[ext_resource type="PackedScene" uid="uid://cn8qgbs33xrk3" path="res://Overlap/Hurtbox.tscn" id="3_t2u8j"]
[ext_resource type="PackedScene" uid="uid://orqaxby5dny4" path="res://Enemy/player_detection_zone.tscn" id="5_rcbkl"]
[ext_resource type="PackedScene" uid="uid://blal8w5nlkync" path="res://Enemy/WanderController.tscn" id="6_po8u1"]

[sub_resource type="Animation" id="Animation_78y51"]
resource_name = "Idle Down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ge11s"]
resource_name = "Idle Side"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_locop"]
resource_name = "Idle Up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_sppuv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y3y1s"]
resource_name = "Walk Down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_5n42e"]
resource_name = "Walk Side"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_yfsdy"]
resource_name = "Walk Up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5fsuc"]
_data = {
"Idle Down": SubResource("Animation_78y51"),
"Idle Side": SubResource("Animation_ge11s"),
"Idle Up": SubResource("Animation_locop"),
"RESET": SubResource("Animation_sppuv"),
"Walk Down": SubResource("Animation_y3y1s"),
"Walk Side": SubResource("Animation_5n42e"),
"Walk Up": SubResource("Animation_yfsdy")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j07t7"]
animation = &"Idle Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xy7ai"]
animation = &"Idle Side"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5pema"]
animation = &"Idle Side"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gxx0b"]
animation = &"Idle Up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_bss00"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j07t7")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_xy7ai")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_5pema")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_gxx0b")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7l5y4"]
animation = &"Walk Down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1cq6r"]
animation = &"Walk Side"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q28ip"]
animation = &"Walk Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_euvku"]
animation = &"Walk Side"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mua6n"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7l5y4")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_1cq6r")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_q28ip")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_euvku")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fqqj3"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_glq2l"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7d5pv"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_j1iey"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_bss00")
states/Idle/position = Vector2(419, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_mua6n")
states/Walk/position = Vector2(632, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_fqqj3"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_glq2l"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_7d5pv")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_ly1f7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_05a7f"]
radius = 8.0
height = 27.14

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rlcf"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_fortt"]
radius = 64.0

[node name="Spider" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 17
script = ExtResource("1_dw5bl")

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("1_ff7es")
offset = Vector2(0, 2)
metadata/_edit_group_ = true

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_muhrx")
offset = Vector2(0, -2)
hframes = 4
vframes = 6
metadata/_edit_group_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5fsuc")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_j1iey")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_ly1f7")
parameters/Idle/blend_position = Vector2(-0.784173, 0.650655)
parameters/Walk/blend_position = Vector2(-0.798561, 0.667686)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.49, 0.49)
shape = SubResource("CapsuleShape2D_05a7f")

[node name="Hurtbox" parent="." instance=ExtResource("3_t2u8j")]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
scale = Vector2(0.861, 0.861)
shape = SubResource("RectangleShape2D_0rlcf")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("5_rcbkl")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_fortt")
debug_color = Color(0.980392, 0.145098, 0, 0.129412)

[node name="WanderController" parent="." instance=ExtResource("6_po8u1")]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
